Added accuracy data and displaying it on score modal

--- a/Field.html
+++ b/Field.html
@@ -15,10 +15,11 @@
 
     <div id="modal-score" class="hidden">
       <p class="text">The end!</p>
-      <p id="scored">Score: <span id="score-output"></span></p>
-      <p id="time">Time: <span id="time-output"></span></p>
-      <p id="clicked">Cirles Clicked: <span id="clicked-output"></span></p>
-      <p id="missed">Circles Missed: <span id="missed-output"></span></p>
+      <p id="scored" class="score-text">Score: <span id="score-output"></span></p>
+      <p id="time" class="score-text">Time: <span id="time-output"></span></p>
+      <p id="clicked" class="score-text">Cirles Clicked: <span id="clicked-output"></span></p>
+      <p id="missed" class="score-text">Circles Missed: <span id="missed-output"></span></p>
+      <p id="accuracy" class="score-text">Accuracy: <span id="accuracy-output"></span>%</p>
       <button id="play-button2" class="start" type="button" name="play-button" value="1">PLAY</button>
     </div> <!-- END SCORE MODAL -->
   </div> <!-- END MODAL AREA -->
