Added all difficulty levels and conditions for choosing each difficulty

--- a/Field.html
+++ b/Field.html
@@ -13,14 +13,16 @@
         <p>Click the circles!</p>
         <p>Fast!</p>
       </div>
-      <input type="checkbox" id="easy" name="Easy" value="Easy">
-      <label for="easy" id="easy-label">Easy</label>
-      <input type="checkbox" id="normal" name="Normal" value="Normal">
-      <label for="normal" id="normal-label">Normal</label>
-      <input type="checkbox" id="hard" name="Hard" value="Hard">
-      <label for="hard" id="hard-label">Hard</label>
-      <input type="checkbox" id="madness" name="MadnessMode" value="Madness">
-      <label for="madness" id="madness-label">Madness Mode</label>
+      <div>
+        <input type="checkbox" id="easy" name="Easy" value="Easy">
+        <label for="easy" id="easy-label">Easy</label>
+        <input type="checkbox" id="normal" name="Normal" value="Normal" checked>
+        <label for="normal" id="normal-label">Normal</label>
+        <input type="checkbox" id="hard" name="Hard" value="Hard">
+        <label for="hard" id="hard-label">Hard</label>
+        <input type="checkbox" id="madness" name="MadnessMode" value="Madness">
+        <label for="madness" id="madness-label">Madness</label>
+      </div>
       <button id="play-button" class="start" type="button" name="play-button" value="1">PLAY</button>
     </div> <!-- END PLAY MODAL -->
 
