--- a/Field.html
+++ b/Field.html
@@ -12,6 +12,8 @@
         <p>Welcome to the game!</p>
         <p>Click the circles!</p>
         <p>Fast!</p>
+        <hr>
+        <p id="difficulty"></p>
       </div>
       <div>
         <input type="checkbox" id="easy" name="Easy" value="Easy">
